--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>tannguyen244 Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/tannguyen244/resume/raw/main/Nguyen-Huu-Tan-TopCV.vn-CV-2.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/tannguyen244/resume/raw/main/Nguyen-Huu-Tan-SRE-stable.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
